# fin-model-compare-tabm

./: LICENSE  README.md  check_data.py  check_features.py  check_y.py  main.py  pyproject.toml
experiments/: evaluate_predictions.py  evaluate_predictions_v2.py  run_rolling.py  run_rolling_v2.py
src/: data_utils.py  model_factory.py  trainer.py
